--- a/qs/6843.tex
+++ b/qs/6843.tex
@@ -1,4 +1,5 @@
-\begin{frame}
+
+\begin{frame},
   \frametitle{iClicker Question}
 Choose from the following options. This item will be graded.
 \begin{block}{iClicker Question}
