--- a/qs/4473.tex
+++ b/qs/4473.tex
@@ -5,9 +5,9 @@ Choose from the following options. This item will be graded.
 [4473] Which three philosophers' views of sex does Butler describe in more detail?
 \end{block}
 \begin{description}
-\item[B\hspace{.2in}$\blacktriangleright$] Kant, Foucault, Derrida
-\item[C\hspace{.2in}$\blacktriangleright$] Kant, Hegel, Nietzsche
-\item[D\hspace{.2in}$\blacktriangleright$] Irigaray, Greer, Schwarzer
-\item[A\hspace{.2in}$\blacktriangleright$] Irigaray, Foucault, Wittig
+\item[A\hspace{.2in}$\blacktriangleright$] Kant, Foucault, Derrida
+\item[B\hspace{.2in}$\blacktriangleright$] Kant, Hegel, Nietzsche
+\item[C\hspace{.2in}$\blacktriangleright$] Irigaray, Greer, Schwarzer
+\item[D\hspace{.2in}$\blacktriangleright$] Irigaray, Foucault, Wittig
 \end{description}
 \end{frame}
